Fix overflow to prevent double scroll on IE

--- a/css/reset.css
+++ b/css/reset.css
@@ -25,12 +25,10 @@ body:after,
   margin: 0;
   padding: 0;
 }
-html {
-  overflow-y: scroll;
-  overflow-x: hidden;
-}
 body {
   width: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 img,
 video,
